wdl-analysis/tests/validation/duplicate-input.errors
error: task `t` contains a duplicate input section
   ┌─ tests/validation/duplicate-input:10:5
   │
 6 │     input {
   │     ----- first input section is defined here
   ·
10 │     input {
   │     ^^^^^ this input section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-input:18:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
18 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate input section
   ┌─ tests/validation/duplicate-input:35:5
   │
31 │     input {
   │     ----- first input section is defined here
   ·
35 │     input {
   │     ^^^^^ this input section is a duplicate

